Included code to change the working directory to notebook's dir before testing the optimization methods

--- a/teslamax.ipynb
+++ b/teslamax.ipynb
@@ -3362,7 +3362,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "os.chdir('C:\\\\Users\\\\fabiofortkamp\\\\code\\\\TeslaMax\\\\')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -3400,7 +3412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -3408,10 +3420,10 @@
     {
      "data": {
       "text/plain": [
-       "-0.82975934666666629"
+       "-0.82751792222222187"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3419,28 +3431,6 @@
    "source": [
     "alpha_B_rem_0 = np.array([15,45,135,14,30,45])\n",
     "calculate_functional_from_remanence_array(alpha_B_rem_0,params_optimization)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1776.1866666665683"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calculate_derivative_functional_to_remanence(0,alpha_B_rem_0,params_optimization)"
    ]
   },
   {
@@ -3486,7 +3476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -3494,10 +3484,10 @@
     {
      "data": {
       "text/plain": [
-       "-0.8115763033333333"
+       "-0.82680030666666626"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3508,7 +3498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -3516,34 +3506,11 @@
     {
      "data": {
       "text/plain": [
-       "-0.81428324111111106"
+       "array([[  2.64779766e-02,  -2.98231642e-05],\n",
+       "       [  3.17854040e-02,  -9.35320997e-03]])"
       ]
      },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "alpha_B_rem_1 = np.array([-102,0,0,0,0,0])\n",
-    "calculate_functional_from_remanence_array(alpha_B_rem_1,params_optimization)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  2.66266963e-02,  -2.98068510e-05],\n",
-       "       [  3.19307149e-02,  -9.32257039e-03]])"
-      ]
-     },
-     "execution_count": 41,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3551,15 +3518,6 @@
    "source": [
     "calculate_B_III_from_single_block([[0.080,0],[0.080,0.01]], segment=1,  magnet='II', magnitude=1.4, angle=0, params=params_optimization)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
