TeslaMax figure is not more complete

--- a/teslamax.ipynb
+++ b/teslamax.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "Teslamax model:\n",
     "\n",
-    "<img src=\"teslamax.png\" width=500>"
+    "<img src=\"figures/teslamax.png\" width=500>"
    ]
   },
   {
