Added Insinga reference to superposition article

--- a/tex/superposition.tex
+++ b/tex/superposition.tex
@@ -127,7 +127,7 @@ It can be seen that, assuming the permeability is constant, all equations are li
 
 The magnetic flux density vector field in the air gap is denoted $\nvbiii (\rvec)$.
 
-Now imagine that only one of the blocks is magnetized (in the first quadrant; the symmetry conditions will still apply). We denote $\nvfremmk{m}{k}  (\nvbremmk{m}{k} )$ the contribution of segment $k$ in magnet $m$ to the vector field $\nvbiii$; that is, is the calculated air gap field when only this segment has its remanence $\nvbremmk{m}{k}$, with all other remanences being null.
+Now imagine that only one of the blocks is magnetized (in the first quadrant; the symmetry conditions will still apply). We denote $\nvfremmk{m}{k}  (\nvbremmk{m}{k} )$ the contribution of segment $k$ in magnet $m$ to the vector field $\nvbiii$ \cite{bib:insinga16_optim}; that is, is the calculated air gap field when only this segment has its remanence $\nvbremmk{m}{k}$, with all other remanences being null.
 
 Because of the Principle of Superposition, the vector field $\nvbiii$ can be expressed as:
 
