Moved functional-related functions from the teslamax package to the Optimization notebook to explore more

--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -125,7 +125,7 @@
        "<module 'teslamax' from 'C:\\\\Users\\\\fabiofortkamp\\\\code\\\\TeslaMax\\\\teslamax\\\\__init__.py'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -159,14 +159,8 @@
     "                \"h_fc\": 0.010,\n",
     "                \"R_e\": 2,\n",
     "                \"n_IV\": 3,\n",
-    "                \"alpha_rem_IV_1\": 15,\n",
-    "                \"alpha_rem_IV_2\": 45,\n",
-    "                \"alpha_rem_IV_3\": 135,\n",
     "                \"phi_S_IV\": 45,\n",
     "                \"n_II\": 3,\n",
-    "                \"alpha_rem_II_1\": 15,\n",
-    "                \"alpha_rem_II_2\": 30,\n",
-    "                \"alpha_rem_II_3\": 45,\n",
     "                \"phi_C_II\": 15,\n",
     "                \"phi_S_II\": 45,\n",
     "                \"B_rem_II_1\": 1.4,\n",
@@ -179,12 +173,81 @@
     "                \"mu_r_IV\": 1.05,\n",
     "              \"linear_iron\": 1,\n",
     "              \"mu_r_iron\": 5e3,\n",
-    "             }"
+    "             }\n",
+    "\n",
+    "alpha_B_rem = [15,30,45,15,45,135]\n",
+    "\n",
+    "params_optimization = teslamax.expand_parameters_from_remanence_array(alpha_B_rem, params_optimization)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below calculate the individual contributions for each magnet block. For instance, the i-th element of the variable `F_II_x` is a list of points in the form $(B_x, B_y)$, calculated in a mesh in the air gap, where only the i-th segment in magnet II has a non-null remanence, with magnitude included in the above dictionary and oriented in the $x$ direction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "delta_alpha = 1e-6\n",
+    "\n",
+    "n_II = params_optimization['n_II']\n",
+    "n_IV = params_optimization['n_IV']\n",
+    "    \n",
+    "F_II_x = []\n",
+    "F_II_y = []\n",
+    "    \n",
+    "F_IV_x = []\n",
+    "F_IV_y = []\n",
+    "    \n",
+    "R_o = params_optimization[\"R_o\"]\n",
+    "R_g = params_optimization[\"R_o\"] + params_optimization[\"h_gap\"]\n",
+    "points_air_gap = teslamax.generate_sector_mesh_points(1.001*R_o,0.999*R_g,0.0,np.pi)\n",
+    "\n",
+    "\n",
+    "for k in range(0,n_II):\n",
+    "    F_II_x.append(teslamax.calculate_B_III_from_single_block(point=points_air_gap, \n",
+    "                                                   segment=k+1, \n",
+    "                                                   magnet='II', \n",
+    "                                                   magnitude=params_optimization[\"B_rem_II_%d\" %(k+1)], \n",
+    "                                                    angle=0.0, \n",
+    "                                                    params=params_optimization))\n",
+    "        \n",
+    "        \n",
+    "    F_II_y.append(teslamax.calculate_B_III_from_single_block(point=points_air_gap, \n",
+    "                                                   segment=k+1,\n",
+    "                                                   magnet='II', \n",
+    "                                                   magnitude=params_optimization[\"B_rem_II_%d\" %(k+1)], \n",
+    "                                                    angle=90.0, \n",
+    "                                                    params=params_optimization))\n",
+    "\n",
+    "for j in range(0,n_IV):\n",
+    "    F_IV_x.append(teslamax.calculate_B_III_from_single_block(point=points_air_gap, \n",
+    "                                                   segment=j+1, \n",
+    "                                                   magnet='IV', \n",
+    "                                                   magnitude=params_optimization[\"B_rem_IV_%d\" %(j+1)], \n",
+    "                                                    angle=0.0, \n",
+    "                                                    params=params_optimization))\n",
+    "        \n",
+    "        \n",
+    "    F_IV_y.append(teslamax.calculate_B_III_from_single_block(point=points_air_gap, \n",
+    "                                                   segment=j+1,\n",
+    "                                                   magnet='IV', \n",
+    "                                                   magnitude=params_optimization[\"B_rem_IV_%d\" %(j+1)], \n",
+    "                                                    angle=90.0, \n",
+    "                                                    params=params_optimization))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -192,46 +255,123 @@
     {
      "data": {
       "text/plain": [
-       "-0.82883014999999971"
+       "array([[  2.10943446e-02,   2.12489439e-04],\n",
+       "       [  2.08467295e-02,   2.82832666e-04],\n",
+       "       [  2.05941864e-02,   3.94219622e-04],\n",
+       "       ..., \n",
+       "       [  3.08528880e-02,   2.07535477e-05],\n",
+       "       [  3.07694049e-02,  -2.08181138e-05],\n",
+       "       [  3.06830942e-02,  -7.83296845e-05]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alpha_B_rem_0 = np.array([15,45,135,14,30,45])\n",
-    "teslamax.calculate_functional_from_remanence_array(alpha_B_rem_0,params_optimization)"
+    "F_II_x[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we apply the principle of superposition, combining the contributions calculated above and using the actual remanence magnitude and angle as specified by the dictionary `params_optimization` and by the array `alpha_B_rem`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "B_III = 0\n",
+    "\n",
+    "for k in range(0,n_II):\n",
+    "    B_rem = params_optimization[\"B_rem_II_%d\" %(k+1)]\n",
+    "    alpha = alpha_B_rem[k]\n",
+    "    \n",
+    "    B = B_rem * (np.cos(alpha) * F_II_x[k] + np.sin(alpha) * F_II_y[k])\n",
+    "    \n",
+    "    B_III = B_III + B\n",
+    "\n",
+    "for j in range(0,n_IV):\n",
+    "    B_rem = params_optimization[\"B_rem_IV_%d\" %(j+1)]\n",
+    "    alpha = alpha_B_rem[n_II + j]\n",
+    "    \n",
+    "    B = B_rem * (np.cos(alpha) * F_II_x[k] + np.sin(alpha) * F_II_y[k])\n",
+    "    \n",
+    "    B_III = B_III + B\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'n_%s'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-297e1adebe68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mpoint\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mteslamax\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcalculate_B_III_from_single_block\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpoint\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'II'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1.40\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams_optimization\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32mC:\\Users\\fabiofortkamp\\code\\TeslaMax\\teslamax\\__init__.py\u001b[0m in \u001b[0;36mcalculate_B_III_from_single_block\u001b[0;34m(point, segment, magnet, magnitude, angle, params)\u001b[0m\n\u001b[1;32m    797\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mm\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'II'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'IV'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    798\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 799\u001b[0;31m         \u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"n_%s\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m%\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    800\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    801\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'n_%s'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ -4.27497924e-01,   2.38421503e-04],\n",
+       "       [ -4.27776491e-01,  -3.23684756e-03],\n",
+       "       [ -4.28088098e-01,  -6.66906819e-03],\n",
+       "       ..., \n",
+       "       [ -2.88056271e-01,   7.77604134e-03],\n",
+       "       [ -2.88267108e-01,   3.80167022e-03],\n",
+       "       [ -2.88506612e-01,  -2.11482539e-04]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# point in the air gap\n",
-    "x = params_optimization[\"R_o\"] + params_optimization[\"h_gap\"]/2\n",
-    "y = 0\n",
-    "point = np.array([x,y])\n",
-    "\n",
-    "teslamax.calculate_B_III_from_single_block(point, 1, 'II', 1.40, 0, params_optimization)"
+    "B_III"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To get the full grid information in the form $(x, y, B_x, B_y)$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function calculates the functional from a list of such points:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And this function calculates the derivative of the functional in respect to the i-th element of `array_B_rem`. Notice that, due to the Principle of Superposition, the calculation of the derivative requires only one extra FEM simulation."
    ]
   },
   {
