Created functions to calculate the F-operators and their superposition

--- a/TeslaMax Optimization.ipynb
+++ b/TeslaMax Optimization.ipynb
@@ -92,7 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -100,10 +109,10 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\fabiofortkamp\\\\code\\\\TeslaMax'"
+       "'C:\\\\Users\\\\fabiofortkamp\\\\code\\\\TeslaMax\\\\teslamax-play-functional'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -175,7 +184,7 @@
     "              \"mu_r_iron\": 5e3,\n",
     "             }\n",
     "\n",
-    "alpha_B_rem = [15,30,45,15,45,135]\n",
+    "alpha_B_rem_0 = [15,30,45,15,45,135]\n",
     "\n",
     "params_optimization = teslamax.expand_parameters_from_remanence_array(alpha_B_rem, params_optimization)"
    ]
@@ -189,65 +198,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "delta_alpha = 1e-6\n",
-    "\n",
-    "n_II = params_optimization['n_II']\n",
-    "n_IV = params_optimization['n_IV']\n",
+    "def calculate_F_operators(points, params):\n",
+    "    \"\"\"\n",
+    "    Return (F_II_x, F_II_y, F_IV_x, F_IV_y), where each element is a list of the F-operators vector fields\n",
+    "    calculated at points.\n",
     "    \n",
-    "F_II_x = []\n",
-    "F_II_y = []\n",
+    "    For instance, F_II_x[0] is an array of (B_x, B_y), calculated when only the first segment of magnet II\n",
+    "    is magnetized in the x-direction\n",
+    "    \"\"\"\n",
     "    \n",
-    "F_IV_x = []\n",
-    "F_IV_y = []\n",
+    "    n_II = params['n_II']\n",
+    "    n_IV = params['n_IV']\n",
+    "        \n",
+    "    F_II_x = []\n",
+    "    F_II_y = []\n",
     "    \n",
-    "R_o = params_optimization[\"R_o\"]\n",
-    "R_g = params_optimization[\"R_o\"] + params_optimization[\"h_gap\"]\n",
-    "points_air_gap = teslamax.generate_sector_mesh_points(1.001*R_o,0.999*R_g,0.0,np.pi)\n",
-    "\n",
-    "\n",
-    "for k in range(0,n_II):\n",
-    "    F_II_x.append(teslamax.calculate_B_III_from_single_block(point=points_air_gap, \n",
+    "    F_IV_x = []\n",
+    "    F_IV_y = []\n",
+    "    \n",
+    "    for k in range(0,n_II):\n",
+    "        F_II_x.append(teslamax.calculate_B_III_from_single_block(point=points, \n",
     "                                                   segment=k+1, \n",
     "                                                   magnet='II', \n",
-    "                                                   magnitude=params_optimization[\"B_rem_II_%d\" %(k+1)], \n",
+    "                                                   magnitude=params[\"B_rem_II_%d\" %(k+1)], \n",
     "                                                    angle=0.0, \n",
-    "                                                    params=params_optimization))\n",
+    "                                                    params=params))\n",
     "        \n",
     "        \n",
-    "    F_II_y.append(teslamax.calculate_B_III_from_single_block(point=points_air_gap, \n",
+    "        F_II_y.append(teslamax.calculate_B_III_from_single_block(point=points, \n",
     "                                                   segment=k+1,\n",
     "                                                   magnet='II', \n",
-    "                                                   magnitude=params_optimization[\"B_rem_II_%d\" %(k+1)], \n",
+    "                                                   magnitude=params[\"B_rem_II_%d\" %(k+1)], \n",
     "                                                    angle=90.0, \n",
-    "                                                    params=params_optimization))\n",
+    "                                                    params=params))\n",
     "\n",
-    "for j in range(0,n_IV):\n",
-    "    F_IV_x.append(teslamax.calculate_B_III_from_single_block(point=points_air_gap, \n",
+    "    for j in range(0,n_IV):\n",
+    "        F_IV_x.append(teslamax.calculate_B_III_from_single_block(point=points, \n",
     "                                                   segment=j+1, \n",
     "                                                   magnet='IV', \n",
-    "                                                   magnitude=params_optimization[\"B_rem_IV_%d\" %(j+1)], \n",
+    "                                                   magnitude=params[\"B_rem_IV_%d\" %(j+1)], \n",
     "                                                    angle=0.0, \n",
-    "                                                    params=params_optimization))\n",
+    "                                                    params=params))\n",
     "        \n",
     "        \n",
-    "    F_IV_y.append(teslamax.calculate_B_III_from_single_block(point=points_air_gap, \n",
+    "        F_IV_y.append(teslamax.calculate_B_III_from_single_block(point=points, \n",
     "                                                   segment=j+1,\n",
     "                                                   magnet='IV', \n",
-    "                                                   magnitude=params_optimization[\"B_rem_IV_%d\" %(j+1)], \n",
+    "                                                   magnitude=params[\"B_rem_IV_%d\" %(j+1)], \n",
     "                                                    angle=90.0, \n",
-    "                                                    params=params_optimization))\n",
-    "        "
+    "                                                    params=params))\n",
+    "        \n",
+    "    return (F_II_x, F_II_y, F_IV_x, F_IV_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 6min 25s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "R_o = params_optimization[\"R_o\"]\n",
+    "R_g = params_optimization[\"R_o\"] + params_optimization[\"h_gap\"]\n",
+    "points_air_gap = teslamax.generate_sector_mesh_points(1.001*R_o,0.999*R_g,0.0,np.pi)\n",
+    "\n",
+    "F_II_x, F_II_y, F_IV_x, F_IV_y = calculate_F_operators(points_air_gap, params_optimization)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -255,16 +292,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[  2.10943446e-02,   2.12489439e-04],\n",
-       "       [  2.08467295e-02,   2.82832666e-04],\n",
-       "       [  2.05941864e-02,   3.94219622e-04],\n",
+       "array([[  2.14235719e-02,   2.12416060e-04],\n",
+       "       [  2.11760514e-02,   2.85394691e-04],\n",
+       "       [  2.09236266e-02,   3.99404704e-04],\n",
        "       ..., \n",
-       "       [  3.08528880e-02,   2.07535477e-05],\n",
-       "       [  3.07694049e-02,  -2.08181138e-05],\n",
-       "       [  3.06830942e-02,  -7.83296845e-05]])"
+       "       [  3.07480961e-02,   2.13079073e-05],\n",
+       "       [  3.06646682e-02,  -2.05238288e-05],\n",
+       "       [  3.05784098e-02,  -7.82881143e-05]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,34 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "B_III = 0\n",
-    "\n",
-    "for k in range(0,n_II):\n",
-    "    B_rem = params_optimization[\"B_rem_II_%d\" %(k+1)]\n",
-    "    alpha = alpha_B_rem[k]\n",
-    "    \n",
-    "    B = B_rem * (np.cos(alpha) * F_II_x[k] + np.sin(alpha) * F_II_y[k])\n",
-    "    \n",
-    "    B_III = B_III + B\n",
-    "\n",
-    "for j in range(0,n_IV):\n",
-    "    B_rem = params_optimization[\"B_rem_IV_%d\" %(j+1)]\n",
-    "    alpha = alpha_B_rem[n_II + j]\n",
-    "    \n",
-    "    B = B_rem * (np.cos(alpha) * F_II_x[k] + np.sin(alpha) * F_II_y[k])\n",
-    "    \n",
-    "    B_III = B_III + B\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -317,39 +327,145 @@
     {
      "data": {
       "text/plain": [
-       "array([[ -4.27497924e-01,   2.38421503e-04],\n",
-       "       [ -4.27776491e-01,  -3.23684756e-03],\n",
-       "       [ -4.28088098e-01,  -6.66906819e-03],\n",
+       "array([[  7.00700000e-02,   0.00000000e+00],\n",
+       "       [  7.00678280e-02,   5.51702062e-04],\n",
+       "       [  7.00613123e-02,   1.10336992e-03],\n",
        "       ..., \n",
-       "       [ -2.88056271e-01,   7.77604134e-03],\n",
-       "       [ -2.88267108e-01,   3.80167022e-03],\n",
-       "       [ -2.88506612e-01,  -2.11482539e-04]])"
+       "       [ -8.98988524e-02,   1.41578407e-03],\n",
+       "       [ -8.99072130e-02,   7.07913977e-04],\n",
+       "       [ -8.99100000e-02,   1.10107994e-17]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "B_III"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To get the full grid information in the form $(x, y, B_x, B_y)$:"
+    "points_air_gap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  7.00700000e-02,   0.00000000e+00,   2.14235719e-02,\n",
+       "          2.12416060e-04],\n",
+       "       [  7.00678280e-02,   5.51702062e-04,   2.11760514e-02,\n",
+       "          2.85394691e-04],\n",
+       "       [  7.00613123e-02,   1.10336992e-03,   2.09236266e-02,\n",
+       "          3.99404704e-04],\n",
+       "       ..., \n",
+       "       [ -8.98988524e-02,   1.41578407e-03,   3.07480961e-02,\n",
+       "          2.13079073e-05],\n",
+       "       [ -8.99072130e-02,   7.07913977e-04,   3.06646682e-02,\n",
+       "         -2.05238288e-05],\n",
+       "       [ -8.99100000e-02,   1.10107994e-17,   3.05784098e-02,\n",
+       "         -7.82881143e-05]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate((points_air_gap, F_II_x[0]), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def superposition_B_III(points, F_II_x, F_II_y, F_IV_x, F_IV_y, alpha_B_rem, params):\n",
+    "    \"\"\"\n",
+    "    Return (x, y, B_x, B_y) based on the lists of F-operators and a vector of remanence angles.\n",
+    "    \n",
+    "    - 'points' is a list of (x,y) points where all of the F-operators are calculated.\n",
+    "    - Each element of 'F_{magnet}_{direction}' is an array of (B_x, B_y) vectors calculated at 'points', \n",
+    "    considering only the effect of that segment\n",
+    "    - 'alpha_B_rem' is a vector of (n_II + n_IV) remanences, where the first n_II represent magnet II and\n",
+    "    the remaining elements represent magnet IV\n",
+    "    - 'params' is a dictionary of parameters\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    B_III = 0\n",
+    "\n",
+    "    n_II = params[\"n_II\"]\n",
+    "    for k in range(0,n_II):\n",
+    "        B_rem = params[\"B_rem_II_%d\" %(k+1)]\n",
+    "        alpha = alpha_B_rem[k]\n",
+    "    \n",
+    "        B = B_rem * (np.cos(alpha) * F_II_x[k] + np.sin(alpha) * F_II_y[k])\n",
+    "    \n",
+    "        B_III = B_III + B\n",
+    "    \n",
+    "    n_IV = params[\"n_IV\"]\n",
+    "    for j in range(0,n_IV):\n",
+    "        B_rem = params[\"B_rem_IV_%d\" %(j+1)]\n",
+    "        alpha = alpha_B_rem[n_II + j]\n",
+    "        \n",
+    "        B = B_rem * (np.cos(alpha) * F_II_x[k] + np.sin(alpha) * F_II_y[k])\n",
+    "        \n",
+    "        B_III = B_III + B\n",
+    "        \n",
+    "    B_III_grid = np.concatenate((points, B_III), axis=1)\n",
+    "    \n",
+    "    return B_III_grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 39.5 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[  7.00700000e-02,   0.00000000e+00,  -4.23752269e-01,\n",
+       "          2.33487607e-04],\n",
+       "       [  7.00678280e-02,   5.51702062e-04,  -4.24025218e-01,\n",
+       "         -3.21006607e-03],\n",
+       "       [  7.00613123e-02,   1.10336992e-03,  -4.24330851e-01,\n",
+       "         -6.61148237e-03],\n",
+       "       ..., \n",
+       "       [ -8.98988524e-02,   1.41578407e-03,  -2.89149283e-01,\n",
+       "          7.81516565e-03],\n",
+       "       [ -8.99072130e-02,   7.07913977e-04,  -2.89361565e-01,\n",
+       "          3.82067333e-03],\n",
+       "       [ -8.99100000e-02,   1.10107994e-17,  -2.89602659e-01,\n",
+       "         -2.12854566e-04]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "superposition_B_III(points_air_gap, F_II_x, F_II_y, F_IV_x, F_IV_y, alpha_B_rem_0, params_optimization)"
+   ]
   },
   {
    "cell_type": "markdown",
